# arkalia-luna-pro

./: ._ENHANCEMENTS.md  ._README.old  .bandit  .coveragerc  .cursorignore  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  404.html  ANALYSE_EXISTANT.md  ANALYSE_SOLID_TASKIA.md  ANALYSE_TESTS_OBSOLETES.md  ARKALIA_ENHANCED_SUMMARY.md  ARKALIA_LUNA_FICHE_TECHNIQUE.md  ARKALIA_LUNA_TECHNICAL_OVERVIEW.md  ARKALIA_LUNA_V2.8.0_FINAL_REPORT.md  ARKALIA_SECURITY_ROADMAP.md  ARKALIA_VSCODE_SETUP_COMPLETE.md  AUDIT_ARKALIA_LUNA_COMPLET.md  AUDIT_CAHIER_CHARGES_V4.0.md  AUDIT_COMPLET_ZEROIA_FINAL.md  BILAN_AMELIORATION_COUVERTURE.md  BILAN_AVANCEMENT_CAHIER_CHARGES.md  CHANGELOG.md  CHECKLIST.md  CI_STATUS_FINAL.md  CI_SUCCES_FINAL.md  CI_SURVEILLANCE_FINALE.md  CI_SURVEILLANCE_TEMPS_REEL.md  CONTAINERS_OPTIMIZATION_SUMMARY.md  CONTRIBUTING.md  CORRECTIONS_CI_CD.md  CORRECTIONS_CI_CD_FINAL.md  CORRECTIONS_COMPLETES_CI_CD.md  DIAGNOSTIC_SYSTEME_ARKALIA_LUNA.md  DOCUMENTATION_OPTIMISATION_FINALE.md  DOCUMENTATION_OPTIMISATION_V2.8.0.md  (+98 more)
.github/: ISSUE_TEMPLATE.md
.github/workflows/: .workflow-status  README.md  arkalia-ci-cd.yml  ci.yml  deploy-optimized.yml  deploy.yml  deployment.yml  docs.yml  documentation.yml  e2e-tests.yml  e2e.yml  performance-tests.yml  security-scan.yml
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _imp.data.json  _imp.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _operator.data.json  _operator.meta.json  (+242 more)
app/: main.py
architecture/: index.html
architecture/cahier_des_charges_v4.0/: index.html
architecture/decision_flow/: index.html
archive/: RAPPORT_PHASE8_FINAL.md  RAPPORT_PHASE9_FINAL.md  io_safe.py
arkalia/: hooks.py
assets/: arkalia-luna-theme.css
benchmark_results/: benchmark_results_20250629_012056.json  benchmark_results_20250629_012159.json  benchmark_results_20250629_012937.json  benchmark_results_20250629_091851.json  benchmark_results_20250629_091949.json  benchmark_results_20250629_092020.json
components/: ArkaliaLunaHomepage.jsx
config/: README.md  arkalia_master_config.toml  arkalia_score.toml  core_config.json  monitoring_config.toml  zeroia_config.toml
configs/: docker-compose.optimized.yml  pytest-performance.ini  pytest-unified.ini
core/: __init__.py  ark_logger.py  core.py
css/: extra.css
deployment/: render_helloria.yml
devops/: index.html
docker/: Dockerfile.cognitive-reactor  Dockerfile.master  Dockerfile.reflexia  Dockerfile.security  Dockerfile.zeroia
docs/: CHANGELOG.md  README.md  api.md  architecture.md  assistantia.md  audit_zeroia_comprehensive.md  automation.md  changelog.md  changelog_temp.md  ci-cd.md  cognitive-levels.md  composants.md  configuration.md  credits.md  deployment.md  docker_hardening.md  faqs.md  index.md  installation.md  kernel.md  license.md  manifest.json  modules.md  ollama.md  ops.md  plan-ameliorations-futures.md  quick-start.md  rapport-documentation-etat.md  rebuild.md  reflexia.md  roadmap.md  robots.txt  security.md  structure.md  style-demo.md  sw.js  tests.md  utilisation.md  vscode-setup.md  zeroia.md
global_state/: global_context.toml
helloria/: core.py
infrastructure/: README.md  index.html
logs/: bandit_report.txt  failure_analysis.md
modules/: README.md  index.html
overrides/: 404.html
plan-ameliorations-futures/: index.html
rapport-documentation-etat/: index.html
releases/: index.html
reports/: AMELIORATIONS_APPLIQUEES.md  AUDIT_MODULES_COMPLET_FINAL.md  AUDIT_NETTOYAGE_FINAL.md  AUDIT_REEL_ETAT_PROJET.md  AUDIT_TESTS_COMPLET.md  GUIDE_UTILISATION_SOLID.md  MERGE_DEV_MIGRATION_FINAL.md  OPTIMISATION_WORKFLOWS_FINALE.md  RAPPORT_AMELIORATIONS_FINALES.md  RAPPORT_AUDIT_TESTS_FINAL.md  RAPPORT_FINAL_CONSOLIDE_2025.md  RAPPORT_NETTOYAGE_FINAL_VALIDE.md  README_LANDING.md  VALIDATION_FINALE_OPTIMISATIONS.md  ameliorations_strategiques_finales.md  audit_complet_arkalia_luna.md  audit_complet_modules_arkalia_luna.md  roadmap_docker_arkalia_luna.md  roadmap_docker_finalisee.md  transformations_strategiques_finales.md
routes/: test_chat_route.py
scripts/: README.md  __init__.py  _generate_updates_page.py  _reflexia_monitor.py  _zeroia_rollback.py  analyze_structure.py  ark-check-hooks.sh  ark-clean-hidden.sh  ark-clean-json.sh  ark-clean-state.sh  ark-containers-fixed.sh  ark-containers-perfect.sh  ark-containers-simple.sh  ark-docker-dev.sh  ark-docker-rebuild.sh  ark-docker-start.sh  ark-docker-status.sh  ark-docker-stop.sh  ark-docs-check.sh  ark-fix-linting.sh  ark-fix-modules.sh  ark-fix-style.sh  ark-fix-vscode-config.sh  ark-gpg-setup.sh  ark-install-extensions.sh  ark-lint-report.sh  ark-master-diagnostic.py  ark-master-enhanced-test.py  ark-master-orchestrator.py  ark-master-test.sh  ark-module-diagnostic.sh  ark-modules-analysis.py  ark-monitor.py  ark-motivation.sh  ark-performance-benchmark.py  ark-push-final.sh  ark-pyright-fix.py  ark-reload-theme.sh  ark-reload-vscode.sh  ark-reset-cursor.sh  (+84 more)
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
src/: App.jsx  index.css
state/: arkalia_master_state.toml  cognitive_pause_active.marker  global_context.toml  reflexia_state.toml  zeroia_dashboard.json  zeroia_snapshot.toml  zeroia_state.toml
tests/: README.md  __init__.py  conftest.py  coverage_map.md  test_base.py  test_core.py
utils/: io_safe.py
vscode-setup/: index.html
(+6864 files in other folders)
