[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arkalia-luna-pro"
version = "1.0.0"
description = "Devstation IA pour modules Arkalia"
authors = [{ name = "Athalia" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "site-packages",
    "build",
    "dist",
    "htmlcov",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: pycodestyle, F: pyflakes, I: isort

[tool.coverage.run]
branch = true
source = ["core", "modules", "scripts", "utils"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/site-packages/*",
    "*/.venv/*",
    "*/_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
    "raise NotImplementedError",
    "except ImportError",
]

[tool.pytest.ini_options]
testpaths = [
  "modules",
  "tests/base",
  "tests/core",
  "tests/scripts",
  "tests/integration"
]
addopts = "--cov --cov-report html"

[tool.pytest]
plugins = ["pytest-asyncio"]

[tool.bumpver]
version_file = ["version.toml", "pyproject.toml"]
current_version = "2.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "🔖 bump: {old_version} → {new_version}"
tag_message = "🔖 Version {new_version}"

# [optionnel] Support MkDocs (plugins à installer via pip si actif)
[tool.mkdocs]
plugins = ["search", "minify"]
