[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arkalia-luna-pro"
version = "1.0.0"
description = "Devstation IA pour modules Arkalia"
authors = [{ name = "Athalia" }]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.4.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "mkdocs>=1.5.3",
  "mkdocs-minify-plugin>=0.7.1",
  "mkdocs-macros-plugin>=1.0.5",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "site-packages",
    "build",
    "dist",
    "htmlcov",
    "tests/_*",
]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: pycodestyle, F: pyflakes, I: isort
ignore = ["E501"]  # Optionnel : ignorer lignes longues

[tool.coverage.run]
branch = true
source = ["core", "modules", "scripts", "utils"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/site-packages/*",
    "*/.venv/*",
    "*/_*.py",
    "scripts/print_sys_path.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
    "raise NotImplementedError",
    "except ImportError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
testpaths = [
  "modules",
  "tests/base",
  "tests/core",
  "tests/scripts",
  "tests/integration"
]
addopts = "--cov --cov-report html"

[tool.bumpver]
version_file = ["version.toml", "pyproject.toml"]
current_version = "2.1.14"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "🔖 bump: {old_version} → {new_version}"
tag_message = "🔖 Version {new_version}"

[tool.mkdocs]
plugins = ["search", "minify", "macros"]

[tool.flake8]
ignore = ["E501"]

[tool.bandit]
skips = ["B101"]
